<resources>
    <string name="app_name">Rubber Side Down</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="please_wait_while_registering">Please wait while registering</string>
    <string name="already_have_account_login">Already have account? LOGIN</string>
    <string name="no_account_register">No Account? REGISTER</string>
    <string name="please_wait_while_we_log_you_in">Please Wait while we log you in</string>
    <string name="forgot_password_recover">Forgot Password? Recover</string>
    <string name="please_wait_while_recovering">Please wait while Recovering</string>
    <string name="sign_out">sign-out</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="users">Users</string>
    <string name="messages">Messages</string>
    <string name="jerad_alexander">Jerad Alexander</string>
    <string name="motorcycle">Motorcycle</string>
    <string name="_10">10</string>
    <string name="likes">Likes</string>
    <string name="_1000000000">1000000000</string>
    <string name="posts">Posts</string>
    <string name="harley_davison">Harley Davison</string>
    <string name="_1000">1000</string>
    <string name="please_wait_updating">Please wait! Updating</string>
    <string name="person_name">Person Name</string>
    <string name="seattle_wa">Seattle, WA</string>
    <string name="online">online</string>
    <string name="start_typing">start typing</string>
    <string name="test_message">test message</string>
    <string name="test_time">1600</string>
    <string name="seen">seen</string>
    <string name="seesbool">Seen</string>
    <string name="delivered">Delivered</string>
    <string name="last_seen">Last seen </string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_body">Enter Body</string>
    <string name="enter_description">Enter Description</string>
    <string name="upload">Upload</string>
    <string name="click_icon_to_add_photo_to_post">Click Icon to add Photo to post</string>
    <string name="create_new_post">Create New Post</string>
    <string name="name">Name</string>
    <string name="_33_min">33 Min</string>
    <string name="posttitle">PostTitle</string>
    <string name="_1_2k_likes">1.2k Likes</string>
    <string name="like">Like</string>
    <string name="comment">COMMENT</string>
    <string name="share">SHARE</string>
    <string name="post_your_comment">Post your comment</string>
    <string name="post_detail">Post Detail</string>
    <string name="_12k_comments">12k Comments</string>
    <string name="comments">Comments</string>
    <string name="this_is_the_comment">this is the comment</string>
    <string name="welcome">information! Thank you and enjoy</string>
    <string name="welcome2">Please press the Edit button on the bottom right to update your profile</string>
    <string name="their_name">Their Name</string>
    <string name="their_last_message">Their last message.</string>
    <string name="chat">Chat!</string>


</resources>