<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"

    tools:context=".activities.DashBoardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.9"
                android:layout_height="wrap_content"
                android:text="@string/create_new_post"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_margin="8dp"
                android:textColor="@android:color/white"/>

            <Button
                android:id="@+id/signout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/button_back"
                android:shadowColor="@android:color/white"
                android:text="@string/sign_out"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:layout_gravity=""
                />
        </LinearLayout>

        <EditText android:id="@+id/post_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:hint="@string/enter_title"
            android:singleLine="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/click_icon_to_add_photo_to_post"
            android:layout_marginTop="16dp"
            android:textAlignment="center"/>
        <ImageView android:id="@+id/post_imageVW"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/add_photo"

            />

        <EditText android:id="@+id/post_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:hint="@string/enter_description"
            android:textColorHint="@color/colorPrimaryDark"
            android:inputType="textCapSentences|textMultiLine"
            android:background="@drawable/editextstyle"
            android:textColor="@color/colorPrimaryDark"
            android:minHeight="80dp"
            android:layout_gravity="center"
            />

        <Button android:id="@+id/post_upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload"/>



    </LinearLayout>




</LinearLayout>