<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"


    tools:context=".activities.MainActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/email_field"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/rsd_logo" />


    <EditText
        android:id="@+id/email_field"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:backgroundTint="@android:color/white"
        android:shadowColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/pass_feild"
        android:hint="@string/email"
        android:layout_margin="16dp"
        />


    <EditText

        android:id="@+id/pass_feild"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@android:color/white"
        android:shadowColor="@android:color/white"
        android:hint="@string/password"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:inputType="textPassword"

        />

    <Button android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/pass_feild"
        android:layout_marginTop="16dp"
        android:background="@android:color/black"
        android:text="@string/register" />

    <TextView android:id="@+id/login_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_account_login"
        android:layout_below="@+id/register_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"

        />

</RelativeLayout>