<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.PostDetailActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_above="@+id/comments_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/post_detail"
                android:textSize="28sp"
                android:background="@color/colorPrimaryDark"
                android:textColor="@android:color/white"/>

            <!--Actual Post-->
            <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:padding="10dp"
                app:cardCornerRadius="3dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true"
                app:cardBackgroundColor="@color/colorPrimary"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout android:id="@+id/profile_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center_vertical">

                        <ImageView android:id="@+id/post_avatar"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/profile_place"
                            android:background="@drawable/avatar_back"
                            android:layout_margin="16dp"
                            />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="1"
                            android:layout_marginTop="16dp">

                            <TextView android:id="@+id/uNameTV"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/name"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                android:textColor="@android:color/white"
                                />

                            <TextView android:id="@+id/pTimeTV"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/_33_min"
                                android:textColor="@android:color/white"
                                />

                        </LinearLayout>

                        <ImageButton android:id="@+id/post_more"
                            android:layout_marginTop="16dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:src="@drawable/more"   />


                    </LinearLayout>

                    <TextView android:id="@+id/pTitleTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/posttitle"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="@android:color/white"
                        />

                    <TextView android:id="@+id/pBodyTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/posttitle"
                        android:textSize="14sp"
                        android:textColor="@android:color/white"
                        />

                    <ImageView android:id="@+id/post_pImageIV"
                        android:layout_width="match_parent"
                        android:layout_height="350dp"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView android:id="@+id/pLikesTV"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/_1_2k_likes"
                            android:textSize="18sp"
                            android:textColor="@color/colorPrimaryDark"
                            android:layout_weight="1"
                            />
                        <TextView android:id="@+id/pCommentTV"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/_12k_comments"
                            android:textSize="18sp"
                            android:layout_weight="1"
                            android:textAlignment="textEnd"
                            android:textColor="@color/colorPrimaryDark"
                            />


                    </LinearLayout>


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#F5F0F0"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <Button android:id="@+id/pLikeBT"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_margin="4dp"
                            android:text="@string/like"
                            android:background="@null"
                            android:drawableStart="@drawable/thumbs"/>

                        <Button android:id="@+id/pShareBT"
                            android:layout_margin="4dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/share"
                            android:background="@null"
                            android:drawableStart="@drawable/share"/>

                    </LinearLayout>

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/comments"
                android:textColor="@android:color/white"
                android:drawableStart="@drawable/comment"
                android:drawablePadding="8dp"
                android:padding="8dp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/comment_recycle_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <RelativeLayout android:id="@+id/comments_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/profile_place"
            android:id="@+id/cAvatarIV"
            android:layout_centerVertical="true"/>

        <EditText android:id="@+id/cCommentEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_toStartOf="@+id/comment_send"
            android:layout_toEndOf="@id/cAvatarIV"
            android:hint="@string/post_your_comment"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/send"
            android:background="@null"
            android:id="@+id/comment_send"
            android:layout_centerVertical="true"
            android:layout_margin="4dp"


            />




    </RelativeLayout>
</RelativeLayout>